--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
-    "joi": "^18.0.1"
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "dotenv": "^17.2.2",
