Agregado de mongo

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=3000
 AUTH_SECRET_KET=clave-segura
+
+JWT_SECRET_KEY=clave-segura-instrument-app
+
+MONGO_DB_HOST=mongodb://localhost:27017
+MONGO_TODOS_DB_NAME=FullStackBackend
+
