--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-status-codes": "^2.3.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
