--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend_full_stack_obligatorio_216026-325990",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js"
