--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ AUTH_SECRET_KET=clave-segura
 
 JWT_SECRET_KEY=clave-segura-instrument-app
 
-MONGO_DB_HOST=mongodb+srv://dsharmaininfo_db_user:Mq8hhPcuM98e2J2n@fullstack2025.ynxbo7o.mongodb.net/?retryWrites=true&w=majority&appName=FullStack2025
+MONGO_DB_HOST=mongodb+srv://dsharmaininfo_db_user:Mq8hhPcuM98e2J2n@fullstack2025.ynxbo7o.mongodb.net/FullStackBackend?retryWrites=true&w=majority&appName=FullStack2025
 MONGO_TODOS_DB_NAME=FullStackBackend
 
