--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Dsharmain1/Backend_Full_Stack_Obligatorio_216026-325990#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^18.0.1",
